#Delete all the shapes #Add addEmployee page #Add the Search page #Update the css for the navBar #Add home page

--- a/HR_Web/Views/Home/Index.cshtml
+++ b/HR_Web/Views/Home/Index.cshtml
@@ -2,7 +2,25 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Home Page</title>
+</head>
+
+<body>
+    <div class="welcome">
+        <h1>Welcome to Human Resources Website this is the Home Page</h1>
+        <h2>Here is the available functionalities in this website</h2>
+    </div>
+    <div>
+        <ul>
+            <li>Add a new employee</li>
+            <li>Edit or Delete existing employee data</li>
+            <li>Search for an employee</li>
+            <li>Submit vacation</li>
+            <li>View submited vacations</li>
+        </ul>
+    <div>
+</body>
+</html>
