--- a/HR_Web/Views/Home/AddEmployee.cshtml
+++ b/HR_Web/Views/Home/AddEmployee.cshtml
@@ -42,13 +42,13 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Material" class="control-label"></label>
-            <select asp-for="Material" class="form-control" id="materialStatus">
+            <label asp-for="Marital" class="control-label"></label>
+            <select asp-for="Marital" class="form-control" id="materialStatus">
                 <option value="">-- Select Material Status --</option>
                 <option value="Single">Single</option>
                 <option value="Married">Married</option>
             </select>
-            <span asp-validation-for="Material" class="text-danger"></span>
+            <span asp-validation-for="Marital" class="text-danger"></span>
         </div>
 
         <div class="form-group">
