--- a/HR_Web/Views/Home/Search.cshtml
+++ b/HR_Web/Views/Home/Search.cshtml
@@ -5,7 +5,7 @@
 
 
 <div class="container">
-    <h1>Search Results</h1>
+    <h2 style="text-align: center">@ViewData["Title"]</h2>
     <div class="row">
 		<form asp-action="SearchEmployee" asp-controller="home">
             <div class="input-group">
@@ -15,30 +15,37 @@
         </form>
     </div>
 
-
-    @if (!Model.Any())
-    {
-        <p>No results found.</p>
-    }
-    else
-    {
-        <table class="table">
-			<thead>
-				<tr>
-					<th>First Name</th>
-					<th>Last Name</th>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (!Model.Any())
+            {
+                <tr>
+					<td colspan="3" style="text-align : center">No employees found.</td>
 				</tr>
-			</thead>
-			<tbody>
+			}
+			else
+			{
 				@foreach (var employee in Model)
 				{
 					<tr>
 						<td>@employee.FirstName</td>
 						<td>@employee.LastName</td>
+
+						<td>
+							<a asp-action="VacationForm" asp-controller="Home" asp-route-id="@employee.Id" class="btn btn-primary">Request Vacation</a>
+						</td>
+
 					</tr>
 				}
-			</tbody>
-        </table>
-    }
+            }
+		</tbody>
+    </table> 
 </div>
 
