--- a/HR_Web/wwwroot/css/site.css
+++ b/HR_Web/wwwroot/css/site.css
@@ -25,6 +25,14 @@ body {
     font-family: Hey Comic;
 }
 
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+td, th{
+    text-align : center;
+}
+
 li, h2 {
     font-family: Liberation Sans;
 }
