--- a/HR_Web/Views/Home/Index.cshtml
+++ b/HR_Web/Views/Home/Index.cshtml
@@ -2,25 +2,22 @@
     ViewData["Title"] = "Home Page";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>@ViewData["Title"]</title>
-</head>
 
-<body>
+
+<div class="container">
     <div class="welcome">
         <h1>Welcome to Human Resources Website this is the Home Page</h1>
         <h2>Here is the available functionalities in this website</h2>
     </div>
     <div>
-        <ul>
+        <ul style="list-style-type: '- ';">
             <li>Add a new employee</li>
             <li>Edit or Delete existing employee data</li>
             <li>Search for an employee</li>
             <li>Submit vacation</li>
-            <li>View submited vacations</li>
+            <li>View submitted vacations</li>
         </ul>
-    <div>
-</body>
-</html>
+    </div>
+</div>
+
+
