--- a/HR_Web/Views/Home/Search.cshtml
+++ b/HR_Web/Views/Home/Search.cshtml
@@ -5,11 +5,23 @@
 
 
 <div class="container">
+    @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
+    {
+        <div class="alert alert-danger" role="alert">
+            @ViewBag.ErrorMessage
+        </div>
+    }
+    @if (!string.IsNullOrEmpty(ViewBag.SuccessMessage))
+    {
+        <div class="alert alert-success" role="alert">
+            @ViewBag.SuccessMessage
+        </div>
+    }
     <h2 style="text-align: center">@ViewData["Title"]</h2>
     <div class="row">
 		<form asp-action="SearchEmployee" asp-controller="home">
             <div class="input-group">
-                <input name="searchQuery" type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                <input name="searchQuery" type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
                 <button id="searchButton" class="btn btn-outline-primary" type="submit">Search</button>
             </div>
         </form>
@@ -20,7 +32,7 @@
             <tr>
                 <th>First Name</th>
                 <th>Last Name</th>
-                <th>Actions</th>
+                <th colspan="2">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -38,9 +50,12 @@
 						<td>@employee.FirstName</td>
 						<td>@employee.LastName</td>
 
-						<td>
+                        <td>
 							<a asp-action="VacationForm" asp-controller="Home" asp-route-id="@employee.Id" class="btn btn-primary">Request Vacation</a>
-						</td>
+                        </td>
+                        <td>
+                            <a asp-action="EditEmployee" asp-controller="Home" asp-route-id="@employee.Id" class="btn btn-primary">Edit & Delete</a>
+                        </td>
 
 					</tr>
 				}
