#Update the Emp name in vacation db when changed in emp db #Improve UI in Edit emp & Vacation form

--- a/HR_Web/Views/Home/EditEmployee.cshtml
+++ b/HR_Web/Views/Home/EditEmployee.cshtml
@@ -141,7 +141,7 @@
     </form>
     <form id="deleteForm" action="@Url.Action("DeleteEmployee", "Home")">
         <input type="hidden" asp-for="Id" />
-        <button type="button" class="btn btn-danger" onclick="confirmDelete()">Delete Employee</button>
+        <button type="button" class="btn btn-danger" onclick="confirmDelete()" style="margin-top: 22px;">Delete Employee</button>
     </form>
 </div>
 
