--- a/HR_Web/Views/Home/VacationForm.cshtml
+++ b/HR_Web/Views/Home/VacationForm.cshtml
@@ -19,29 +19,30 @@
         </div>
     }
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <label asp-for="EmployeeId" class="control-label">Employee ID</label>
             <input asp-for="EmployeeId" class="form-control" disabled value="@ViewBag.EmployeeId" />
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <label asp-for="EmployeeName" class="control-label">Employee Name</label>
             <input asp-for="EmployeeName" class="form-control" disabled value="@ViewBag.EmployeeName" />
         </div>
     </div>
 
     <form action="/home/VacationForm" method="post">
-	    <div class="form-group">
-            <label asp-for="StartDate" class="control-label"></label>
-            <input asp-for="StartDate" class="form-control" placeholder="From" type="date" />
-            <span asp-validation-for="StartDate" class="text-danger"></span>
-	    </div>
+        <div class="row">
+            <div class="form-group col-md-6">
+                <label asp-for="StartDate" class="control-label">Start Date</label>
+                <input asp-for="StartDate" class="form-control" placeholder="From" type="date" />
+                <span asp-validation-for="StartDate" class="text-danger"></span>
+	        </div>
 
-	    <div class="form-group">
-            <label asp-for="EndDate" class="control-label"></label>
-            <input asp-for="EndDate" class="form-control" placeholder="To" type="date" />
-            <span asp-validation-for="EndDate" class="text-danger"></span>
+            <div class="form-group col-md-6">
+                <label asp-for="EndDate" class="control-label">End Date</label>
+                <input asp-for="EndDate" class="form-control" placeholder="To" type="date" />
+                <span asp-validation-for="EndDate" class="text-danger"></span>
+            </div>
         </div>
-
         <div class="form-group">
             <label asp-for="Reason" class="control-label"></label>
             <textarea asp-for="Reason" class="form-control" placeholder="Reason" rows="8"></textarea>
